--- a/less/navbar-vertical.less
+++ b/less/navbar-vertical.less
@@ -266,3 +266,17 @@
     // }
   }
 }
+
+// Dropdowns fly out to the side
+.navbar-fixed-left .navbar-nav {
+  .open .dropdown-menu {
+    top: 0;
+    left: 100%;
+  }
+}
+.navbar-fixed-right .navbar-nav {
+  .open .dropdown-menu {
+    top: 0;
+    left: -100%;
+  }
+}
