--- a/less/navbar-vertical.less
+++ b/less/navbar-vertical.less
@@ -6,6 +6,26 @@
 @import 'bootstrap/less/mixins.less';
 
 
+// Wrapper and base class
+//
+// Provide a static navbar from which we expand to create full-width, fixed, and
+// other navbar variations.
+
+// .navbar {
+//   position: relative;
+//   min-height: @navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
+//   margin-bottom: @navbar-margin-bottom;
+//   border: 1px solid transparent;
+
+//   // Prevent floats from breaking the navbar
+//   &:extend(.clearfix all);
+
+//   @media (min-width: @grid-float-breakpoint) {
+//     border-radius: @navbar-border-radius;
+//   }
+// }
+
+
 // Navbar heading
 //
 // Groups `.navbar-brand` and `.navbar-toggle` into a single component for easy
@@ -13,13 +33,12 @@
 
 .navbar-fixed-left .navbar-header,
 .navbar-fixed-right .navbar-header {
+  // &:extend(.clearfix all);
+
   @media (min-width: @grid-float-breakpoint) {
     float: none;
   }
 }
-
-
-
 
 
 // Navbar collapse (body)
@@ -34,48 +53,90 @@
 
 .navbar-fixed-left .navbar-collapse,
 .navbar-fixed-right .navbar-collapse {
-  // overflow-x: visible;
-  // padding-right: @navbar-padding-horizontal;
-  // padding-left:  @navbar-padding-horizontal;
-  // border-top: 1px solid transparent;
-  // box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
-  // &:extend(.clearfix all);
-  // -webkit-overflow-scrolling: touch;
+//   overflow-x: visible;
+//   padding-right: @navbar-padding-horizontal;
+//   padding-left:  @navbar-padding-horizontal;
+//   border-top: 1px solid transparent;
+//   box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+//   &:extend(.clearfix all);
+//   -webkit-overflow-scrolling: touch;
 
-  // &.in {
-  //   overflow-y: auto;
-  // }
+//   &.in {
+//     overflow-y: auto;
+//   }
 
-  @media (min-width: @grid-float-breakpoint) {
-    padding-left: 0;
-    padding-right: 0;
+//   @media (min-width: @grid-float-breakpoint) {
+//     width: auto;
+//     border-top: 0;
+//     box-shadow: none;
+    margin-right: -@navbar-padding-horizontal;
+    margin-left:  -@navbar-padding-horizontal;
 
-  //   width: auto;
-  //   border-top: 0;
-  //   box-shadow: none;
+//     &.collapse {
+//       display: block !important;
+//       height: auto !important;
+//       padding-bottom: 0; // Override default setting
+//       overflow: visible !important;
+//     }
 
-  //   &.collapse {
-  //     display: block !important;
-  //     height: auto !important;
-  //     padding-bottom: 0; // Override default setting
-  //     overflow: visible !important;
-  //   }
+//     &.in {
+//       overflow-y: visible;
+//     }
 
-  //   &.in {
-  //     overflow-y: visible;
-  //   }
-
-  //   // Undo the collapse side padding for navbars with containers to ensure
-  //   // alignment of right-aligned contents.
-  //   .navbar-fixed-top &,
-  //   .navbar-static-top &,
-  //   .navbar-fixed-bottom & {
-  //     padding-left: 0;
-  //     padding-right: 0;
-  //   }
-  }
+//     // Undo the collapse side padding for navbars with containers to ensure
+//     // alignment of right-aligned contents.
+//     .navbar-fixed-top &,
+//     .navbar-static-top &,
+//     .navbar-fixed-bottom & {
+//       padding-left: 0;
+//       padding-right: 0;
+//     }
+//   }
 }
 
+
+// .navbar-fixed-left,
+// .navbar-fixed-right {
+//   .navbar-collapse {
+//     max-height: @navbar-collapse-max-height;
+
+//     @media (max-width: @screen-xs-min) and (orientation: landscape) {
+//       max-height: 200px;
+//     }
+//   }
+// }
+
+
+// Both navbar header and collapse
+//
+// When a container is present, change the behavior of the header and collapse.
+
+// .navbar-fixed-left .container,
+// .navbar-fixed-right .container,
+// .navbar-fixed-left .container-fluid,
+// .navbar-fixed-right .container-fluid {
+//   > .navbar-header,
+//   > .navbar-collapse {
+//     margin-right: -@navbar-padding-horizontal;
+//     margin-left:  -@navbar-padding-horizontal;
+
+//     @media (min-width: @grid-float-breakpoint) {
+//       margin-right: 0;
+//       margin-left:  0;
+//     }
+//   }
+// }
+
+// Static left/right (unfixed, but 100% height) navbar
+// .navbar-static-left,
+// .navbar-static-right {
+//   z-index: @zindex-navbar;
+//   border-width: 0 0 1px;
+
+//   @media (min-width: @grid-float-breakpoint) {
+//     border-radius: 0;
+//   }
+// }
 
 //
 // Vertical Navbar alignment options
@@ -85,14 +146,23 @@
 // Fix the left/right navbars when screen real estate supports it
 .navbar-fixed-left,
 .navbar-fixed-right {
-  margin-bottom: 0; // override .navbar defaults
+
   width: @navbar-width;
+  margin-bottom: 0; // override .navbar defaults
 
   position: fixed;
   top: 0;
   bottom: 0;
   z-index: @zindex-navbar-fixed;
   .translate3d(0, 0, 0);
+
+  // Layout like navbar-fixed-top below breakpoint
+  @media (max-width: @grid-float-breakpoint-max) {
+    left: 0;
+    right: 0;
+    bottom: auto;
+    width: auto;
+  }
 
   // Undo the rounded corners
   @media (min-width: @grid-float-breakpoint) {
@@ -113,35 +183,31 @@
 
 .navbar-brand {
 
-  // Override .navbar defaults
-  .navbar-fixed-left &,
-  .navbar-fixed-right & {
-    float: none;
-    display: inline-block;
-
-    // padding: @navbar-padding-vertical @navbar-padding-horizontal;
-    // font-size: @font-size-large;
-    // line-height: @line-height-computed;
-    // height: @navbar-height;
-
-    // &:hover,
-    // &:focus {
-    //   text-decoration: none;
-    // }
-
-  }
-
   @media (min-width: @grid-float-breakpoint) {
-    .navbar-fixed-left > .container &,
-    .navbar-fixed-right > .container &,
-    .navbar-fixed-left > .container-fluid &,
-    .navbar-fixed-right > .container-fluid & {
-      margin-left: -@navbar-padding-horizontal;
+    .navbar-fixed-left &,
+    .navbar-fixed-right & {
+      float: none;
+      display: inline-block;
     }
   }
+  // float: left;
+  // padding: @navbar-padding-vertical @navbar-padding-horizontal;
+  // font-size: @font-size-large;
+  // line-height: @line-height-computed;
+  // height: @navbar-height;
+
+  // &:hover,
+  // &:focus {
+  //   text-decoration: none;
+  // }
+
+  // @media (min-width: @grid-float-breakpoint) {
+  //   .navbar > .container &,
+  //   .navbar > .container-fluid & {
+  //     margin-left: -@navbar-padding-horizontal;
+  //   }
+  // }
 }
-
-
 
 
 // Navbar toggle
@@ -149,8 +215,7 @@
 // Custom button for toggling the `.navbar-collapse`, powered by the collapse
 // JavaScript plugin.
 
-// .navbar-fixed-left .navbar-toggle,
-// .navbar-fixed-right .navbar-toggle {
+// .navbar-toggle {
 //   position: relative;
 //   float: right;
 //   margin-right: @navbar-padding-horizontal;
@@ -189,71 +254,456 @@
 // Builds on top of the `.nav` components with its own modifier class to make
 // the nav the full height of the horizontal nav (above 768px).
 
-.navbar-fixed-left .navbar-nav,
-.navbar-fixed-right .navbar-nav {
-  // margin: (@navbar-padding-vertical / 2) -@navbar-padding-horizontal;
+.navbar-nav {
+//   margin: (@navbar-padding-vertical / 2) -@navbar-padding-horizontal;
 
-  // > li > a {
-  //   padding-top:    10px;
-  //   padding-bottom: 10px;
-  //   line-height: @line-height-computed;
-  // }
+//   > li > a {
+//     padding-top:    10px;
+//     padding-bottom: 10px;
+//     line-height: @line-height-computed;
+//   }
 
-  // @media (max-width: @grid-float-breakpoint-max) {
-  //   // Dropdowns get custom display when collapsed
-  //   .open .dropdown-menu {
-  //     position: static;
-  //     float: none;
-  //     width: auto;
-  //     margin-top: 0;
-  //     background-color: transparent;
-  //     border: 0;
-  //     box-shadow: none;
-  //     > li > a,
-  //     .dropdown-header {
-  //       padding: 5px 15px 5px 25px;
-  //     }
-  //     > li > a {
-  //       line-height: @line-height-computed;
-  //       &:hover,
-  //       &:focus {
-  //         background-image: none;
-  //       }
-  //     }
-  //   }
-  // }
+//   @media (max-width: @grid-float-breakpoint-max) {
+//     // Dropdowns get custom display when collapsed
+//     .open .dropdown-menu {
+//       position: static;
+//       float: none;
+//       width: auto;
+//       margin-top: 0;
+//       background-color: transparent;
+//       border: 0;
+//       box-shadow: none;
+//       > li > a,
+//       .dropdown-header {
+//         padding: 5px 15px 5px 25px;
+//       }
+//       > li > a {
+//         line-height: @line-height-computed;
+//         &:hover,
+//         &:focus {
+//           background-image: none;
+//         }
+//       }
+//     }
+//   }
 
   // Uncollapse the nav
   @media (min-width: @grid-float-breakpoint) {
-    float: none;
-    margin-left: -@navbar-padding-horizontal;
-    margin-right: -@navbar-padding-horizontal;
+    .navbar-fixed-left &,
+    .navbar-fixed-right & {
+      float: none;
+      margin-left: -@navbar-padding-horizontal;
+      margin-right: -@navbar-padding-horizontal;
+
+      > li {
+        float: none;
+      }
+    }
+    // float: left;
     // margin: 0;
 
-    > li {
-      float: none;
-      // > a {
-      //   padding-top:    @navbar-padding-vertical;
-      //   padding-bottom: @navbar-padding-vertical;
-      // }
-    }
+    // > li {
+    //   float: left;
+    //   > a {
+    //     padding-top:    @navbar-padding-vertical;
+    //     padding-bottom: @navbar-padding-vertical;
+    //   }
+    // }
 
     // &.navbar-right:last-child {
     //   margin-right: -@navbar-padding-horizontal;
     // }
   }
+
+  // Dropdowns fly out to the side
+  @media (min-width: @grid-float-breakpoint) {
+    .navbar-fixed-left & {
+      .dropdown-menu {
+        top: 0;
+        left: 100%;
+      }
+    }
+    .navbar-fixed-right & {
+      .dropdown-menu {
+        top: 0;
+        left: -100%;
+      }
+    }
+  }
 }
 
-// Dropdowns fly out to the side
-.navbar-fixed-left .navbar-nav {
-  .open .dropdown-menu {
-    top: 0;
-    left: 100%;
-  }
-}
-.navbar-fixed-right .navbar-nav {
-  .open .dropdown-menu {
-    top: 0;
-    left: -100%;
-  }
-}
+
+// Component alignment
+//
+// Repurpose the pull utilities as their own navbar utilities to avoid specificity
+// issues with parents and chaining. Only do this when the navbar is uncollapsed
+// though so that navbar contents properly stack and align in mobile.
+
+// @media (min-width: @grid-float-breakpoint) {
+//   .navbar-left  { .pull-left(); }
+//   .navbar-right { .pull-right(); }
+// }
+
+
+// Navbar form
+//
+// Extension of the `.form-inline` with some extra flavor for optimum display in
+// our navbars.
+
+// .navbar-form {
+//   margin-left: -@navbar-padding-horizontal;
+//   margin-right: -@navbar-padding-horizontal;
+//   padding: 10px @navbar-padding-horizontal;
+//   border-top: 1px solid transparent;
+//   border-bottom: 1px solid transparent;
+//   @shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
+//   .box-shadow(@shadow);
+
+//   // Mixin behavior for optimum display
+//   .form-inline();
+
+//   .form-group {
+//     @media (max-width: @grid-float-breakpoint-max) {
+//       margin-bottom: 5px;
+//     }
+//   }
+
+//   // Vertically center in expanded, horizontal navbar
+//   .navbar-vertical-align(@input-height-base);
+
+//   // Undo 100% width for pull classes
+//   @media (min-width: @grid-float-breakpoint) {
+//     width: auto;
+//     border: 0;
+//     margin-left: 0;
+//     margin-right: 0;
+//     padding-top: 0;
+//     padding-bottom: 0;
+//     .box-shadow(none);
+
+//     // Outdent the form if last child to line up with content down the page
+//     &.navbar-right:last-child {
+//       margin-right: -@navbar-padding-horizontal;
+//     }
+//   }
+// }
+
+
+// Dropdown menus
+
+// Menu position and menu carets
+// .navbar-nav > li > .dropdown-menu {
+//   margin-top: 0;
+//   .border-top-radius(0);
+// }
+// Menu position and menu caret support for dropups via extra dropup class
+// .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
+//   .border-bottom-radius(0);
+// }
+
+
+// Buttons in navbars
+//
+// Vertically center a button within a navbar (when *not* in a form).
+
+// .navbar-btn {
+//   .navbar-vertical-align(@input-height-base);
+
+//   &.btn-sm {
+//     .navbar-vertical-align(@input-height-small);
+//   }
+//   &.btn-xs {
+//     .navbar-vertical-align(22);
+//   }
+// }
+
+
+// Text in navbars
+//
+// Add a class to make any element properly align itself vertically within the navbars.
+
+// .navbar-text {
+//   .navbar-vertical-align(@line-height-computed);
+
+//   @media (min-width: @grid-float-breakpoint) {
+//     float: left;
+//     margin-left: @navbar-padding-horizontal;
+//     margin-right: @navbar-padding-horizontal;
+
+//     // Outdent the form if last child to line up with content down the page
+//     &.navbar-right:last-child {
+//       margin-right: 0;
+//     }
+//   }
+// }
+
+// Alternate navbars
+// --------------------------------------------------
+
+// // Default navbar
+// .navbar-default {
+//   background-color: @navbar-default-bg;
+//   border-color: @navbar-default-border;
+
+//   .navbar-brand {
+//     color: @navbar-default-brand-color;
+//     &:hover,
+//     &:focus {
+//       color: @navbar-default-brand-hover-color;
+//       background-color: @navbar-default-brand-hover-bg;
+//     }
+//   }
+
+//   .navbar-text {
+//     color: @navbar-default-color;
+//   }
+
+//   .navbar-nav {
+//     > li > a {
+//       color: @navbar-default-link-color;
+
+//       &:hover,
+//       &:focus {
+//         color: @navbar-default-link-hover-color;
+//         background-color: @navbar-default-link-hover-bg;
+//       }
+//     }
+//     > .active > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         color: @navbar-default-link-active-color;
+//         background-color: @navbar-default-link-active-bg;
+//       }
+//     }
+//     > .disabled > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         color: @navbar-default-link-disabled-color;
+//         background-color: @navbar-default-link-disabled-bg;
+//       }
+//     }
+//   }
+
+//   .navbar-toggle {
+//     border-color: @navbar-default-toggle-border-color;
+//     &:hover,
+//     &:focus {
+//       background-color: @navbar-default-toggle-hover-bg;
+//     }
+//     .icon-bar {
+//       background-color: @navbar-default-toggle-icon-bar-bg;
+//     }
+//   }
+
+//   .navbar-collapse,
+//   .navbar-form {
+//     border-color: @navbar-default-border;
+//   }
+
+//   // Dropdown menu items
+//   .navbar-nav {
+//     // Remove background color from open dropdown
+//     > .open > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         background-color: @navbar-default-link-active-bg;
+//         color: @navbar-default-link-active-color;
+//       }
+//     }
+
+//     @media (max-width: @grid-float-breakpoint-max) {
+//       // Dropdowns get custom display when collapsed
+//       .open .dropdown-menu {
+//         > li > a {
+//           color: @navbar-default-link-color;
+//           &:hover,
+//           &:focus {
+//             color: @navbar-default-link-hover-color;
+//             background-color: @navbar-default-link-hover-bg;
+//           }
+//         }
+//         > .active > a {
+//           &,
+//           &:hover,
+//           &:focus {
+//             color: @navbar-default-link-active-color;
+//             background-color: @navbar-default-link-active-bg;
+//           }
+//         }
+//         > .disabled > a {
+//           &,
+//           &:hover,
+//           &:focus {
+//             color: @navbar-default-link-disabled-color;
+//             background-color: @navbar-default-link-disabled-bg;
+//           }
+//         }
+//       }
+//     }
+//   }
+
+
+  // Links in navbars
+  //
+  // Add a class to ensure links outside the navbar nav are colored correctly.
+
+//   .navbar-link {
+//     color: @navbar-default-link-color;
+//     &:hover {
+//       color: @navbar-default-link-hover-color;
+//     }
+//   }
+
+//   .btn-link {
+//     color: @navbar-default-link-color;
+//     &:hover,
+//     &:focus {
+//       color: @navbar-default-link-hover-color;
+//     }
+//     &[disabled],
+//     fieldset[disabled] & {
+//       &:hover,
+//       &:focus {
+//         color: @navbar-default-link-disabled-color;
+//       }
+//     }
+//   }
+// }
+
+// Inverse navbar
+
+// .navbar-inverse {
+//   background-color: @navbar-inverse-bg;
+//   border-color: @navbar-inverse-border;
+
+//   .navbar-brand {
+//     color: @navbar-inverse-brand-color;
+//     &:hover,
+//     &:focus {
+//       color: @navbar-inverse-brand-hover-color;
+//       background-color: @navbar-inverse-brand-hover-bg;
+//     }
+//   }
+
+//   .navbar-text {
+//     color: @navbar-inverse-color;
+//   }
+
+//   .navbar-nav {
+//     > li > a {
+//       color: @navbar-inverse-link-color;
+
+//       &:hover,
+//       &:focus {
+//         color: @navbar-inverse-link-hover-color;
+//         background-color: @navbar-inverse-link-hover-bg;
+//       }
+//     }
+//     > .active > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         color: @navbar-inverse-link-active-color;
+//         background-color: @navbar-inverse-link-active-bg;
+//       }
+//     }
+//     > .disabled > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         color: @navbar-inverse-link-disabled-color;
+//         background-color: @navbar-inverse-link-disabled-bg;
+//       }
+//     }
+//   }
+
+  // Darken the responsive nav toggle
+//   .navbar-toggle {
+//     border-color: @navbar-inverse-toggle-border-color;
+//     &:hover,
+//     &:focus {
+//       background-color: @navbar-inverse-toggle-hover-bg;
+//     }
+//     .icon-bar {
+//       background-color: @navbar-inverse-toggle-icon-bar-bg;
+//     }
+//   }
+
+//   .navbar-collapse,
+//   .navbar-form {
+//     border-color: darken(@navbar-inverse-bg, 7%);
+//   }
+
+  // Dropdowns
+//   .navbar-nav {
+//     > .open > a {
+//       &,
+//       &:hover,
+//       &:focus {
+//         background-color: @navbar-inverse-link-active-bg;
+//         color: @navbar-inverse-link-active-color;
+//       }
+//     }
+
+//     @media (max-width: @grid-float-breakpoint-max) {
+//       // Dropdowns get custom display
+//       .open .dropdown-menu {
+//         > .dropdown-header {
+//           border-color: @navbar-inverse-border;
+//         }
+//         .divider {
+//           background-color: @navbar-inverse-border;
+//         }
+//         > li > a {
+//           color: @navbar-inverse-link-color;
+//           &:hover,
+//           &:focus {
+//             color: @navbar-inverse-link-hover-color;
+//             background-color: @navbar-inverse-link-hover-bg;
+//           }
+//         }
+//         > .active > a {
+//           &,
+//           &:hover,
+//           &:focus {
+//             color: @navbar-inverse-link-active-color;
+//             background-color: @navbar-inverse-link-active-bg;
+//           }
+//         }
+//         > .disabled > a {
+//           &,
+//           &:hover,
+//           &:focus {
+//             color: @navbar-inverse-link-disabled-color;
+//             background-color: @navbar-inverse-link-disabled-bg;
+//           }
+//         }
+//       }
+//     }
+//   }
+
+//   .navbar-link {
+//     color: @navbar-inverse-link-color;
+//     &:hover {
+//       color: @navbar-inverse-link-hover-color;
+//     }
+//   }
+
+//   .btn-link {
+//     color: @navbar-inverse-link-color;
+//     &:hover,
+//     &:focus {
+//       color: @navbar-inverse-link-hover-color;
+//     }
+//     &[disabled],
+//     fieldset[disabled] & {
+//       &:hover,
+//       &:focus {
+//         color: @navbar-inverse-link-disabled-color;
+//       }
+//     }
+//   }
+// }
