modified container class to mimic container-fluid

--- a/less/navbar-vertical.less
+++ b/less/navbar-vertical.less
@@ -36,6 +36,16 @@
 // }
 
 
+// Navbar containers
+//
+// Since this component is side-aligned it does not allow fixed-width containers
+
+.navbar-fixed-left .container,
+.navbar-fixed-right .container {
+  width: auto !important;
+}
+
+
 // Navbar heading
 //
 // Groups `.navbar-brand` and `.navbar-toggle` into a single component for easy
