media query tweaks to borders and positioning

--- a/less/navbar-vertical.less
+++ b/less/navbar-vertical.less
@@ -173,13 +173,15 @@
     border-radius: 0;
   }
 }
-.navbar-fixed-left {
-  left: 0;
-  border-width: 0 0 0 1px;
-}
-.navbar-fixed-right {
-  right: 0;
-  border-width: 0 1px 0 0;
+@media (min-width: @grid-float-breakpoint) {
+  .navbar-fixed-left {
+    left: 0;
+    border-width: 0 0 0 1px;
+  }
+  .navbar-fixed-right {
+    right: 0;
+    border-width: 0 1px 0 0;
+  }
 }
 
 
